deploy/linera-application-k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: linera-application-service-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: linera-application-service-traefik-app
    k8s.kuboard.cn/workload: linera-application-service-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-linera-application-service-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /
            backend:
              serviceName: linera-application-service
              servicePort: 50870
    - host: api.linerameme.fun
      http: *http_rules
    - host: api.lineraswap.fun
      http: *http_rules
    - host: api.linerablob.fun
      http: *http_rules
    - host: api.testnet.linerameme.fun
      http: *http_rules
    - host: api.testnet.lineraswap.fun
      http: *http_rules
    - host: api.testnet.linerablob.fun
      http: *http_rules
